--- a/_posts/2024-06-21-aiyeee.md
+++ b/_posts/2024-06-21-aiyeee.md
@@ -8,6 +8,7 @@ year_end: false
 creators: [komiksnirenren]
 tags: [romance, indie]
 last_updated: 2024-06-21
+ongoing: false
 ---
 
 | [Chapter 1](/{{ page.series }}/1) | 2020 |
