--- a/_posts/2024-07-01-ii.md
+++ b/_posts/2024-07-01-ii.md
@@ -11,7 +11,7 @@ last_updated: 2024-07-01
 ongoing: false
 ---
 
-| [Chapter 1](/{{ page.series }}/1) | 2019 |
+| [Chapter 1](/{{ page.series }}/1) | Dec 2019 |
 
 <p class="comic-last-updated">
 updated: {{ page.last_updated | date: "%d %-b %Y" }}
