--- a/_posts/2024-06-21-aiyeee.md
+++ b/_posts/2024-06-21-aiyeee.md
@@ -11,7 +11,7 @@ last_updated: 2024-06-21
 ongoing: false
 ---
 
-| [Chapter 1](/{{ page.series }}/1) | 2020 |
+| [Chapter 1](/{{ page.series }}/1) | Apr 2020 |
 
 <p class="comic-last-updated">
 updated: {{ page.last_updated | date: "%d %-b %Y" }}
